--- a/client/package.json
+++ b/client/package.json
@@ -3,27 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@date-io/moment": "0.0.2",
     "@material-ui/core": "^1.1.0",
     "@material-ui/icons": "^1.1.0",
     "@rematch/core": "^0.6.0",
     "ajv": "^6.4.0",
     "axios": "^0.18.0",
     "dateformat": "^3.0.3",
+    "downshift": "^2.2.3",
     "geocoder": "^0.2.3",
     "i": "^0.3.6",
     "import": "0.0.6",
     "install": "^0.11.0",
+    "match-sorter": "^2.3.0",
+    "material-ui-filter": "^2.1.14",
+    "material-ui-pickers": "^2.2.4",
     "mdi-material-ui": "^5.1.1",
     "mdi-svg": "^2.2.43",
+    "moment": "^2.24.0",
+    "muishift": "^1.0.13",
     "npm": "^6.1.0",
     "prop-types": "^15.6.1",
     "react": "^16.0.0",
     "react-dom": "^16.3.2",
+    "react-list": "^0.8.11",
     "react-mdi": "^0.5.7",
     "react-redux": "^5.0.7",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.17",
+    "react-virtualized": "^9.21.0",
     "recompose": "^0.27.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
